<?xml version="1.0" encoding="utf-8"?>
<!--
Abstract :

Preferences for Stephe's Music Player.
Copyright (C) 2011, 2024 Stephen Leake.  All Rights Reserved.

This program is free software; you can redistribute it and/or
modify it under terms of the GNU General Public License as
published by the Free Software Foundation; either version 3, or
(at your option) any later version. This program is distributed in
the hope that it will be useful, but WITHOUT ANY WARRANTY; without
even the implied warranty of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU General Public License for more
details. You should have received a copy of the GNU General Public
License distributed with this program; see file COPYING. If not,
write to the Free Software Foundation, 51 Franklin Street, Suite
500, Boston, MA 02110-1335, USA.
-->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.preference.PreferenceCategory
      app:title="all">

    <androidx.preference.EditTextPreference
        app:key="@string/server_IP_key"
        app:defaultValue="@string/server_IP_default"
        app:title="@string/server_IP_title"
        app:summary="@string/server_IP_summary"
        app:dialogTitle="@string/server_IP_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/server_Port_key"
        app:defaultValue="0"
        android:numeric="integer"
        app:title="@string/server_Port_title"
        app:summary="@string/server_Port_summary"
        app:dialogTitle="@string/server_Port_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/min_image_size_key"
        app:defaultValue="@string/min_image_size_default"
        android:numeric="integer"
        app:title="@string/min_image_size_title"
        app:summary="@string/min_image_size_summary"
        app:dialogTitle="@string/min_image_size_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/song_count_max_key"
        app:defaultValue="@string/song_count_max_default"
        android:numeric="integer"
        app:title="@string/song_count_max_title"
        app:summary="@string/song_count_max_summary"
        app:dialogTitle="@string/song_count_max_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/new_song_fraction_key"
        app:defaultValue="@string/new_song_fraction_default"
        android:numeric="decimal"
        app:title="@string/new_song_fraction_title"
        app:summary="@string/new_song_fraction_summary"
        app:dialogTitle="@string/new_song_fraction_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/over_select_ratio_key"
        app:defaultValue="@string/over_select_ratio_default"
        android:numeric="decimal"
        app:title="@string/over_select_ratio_title"
        app:summary="@string/over_select_ratio_summary"
        app:dialogTitle="@string/over_select_ratio_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/song_count_threshold_key"
        app:defaultValue="@string/song_count_threshold_default"
        android:numeric="integer"
        app:title="@string/song_count_threshold_title"
        app:summary="@string/song_count_threshold_summary"
        app:dialogTitle="@string/song_count_threshold_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/prev_threshold_key"
        app:defaultValue="@string/prev_threshold_default"
        android:numeric="integer"
        app:title="@string/prev_threshold_title"
        app:summary="@string/prev_threshold_summary"
        app:dialogTitle="@string/prev_threshold_dialog_title" />

    <androidx.preference.EditTextPreference
        app:key="@string/text_scale_key"
        app:defaultValue="@string/text_scale_default"
        android:numeric="decimal"
        app:title="@string/text_scale_title"
        app:summary="@string/text_scale_summary"
        app:dialogTitle="@string/text_scale_dialog_title" />

  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
