<?xml version="1.0" encoding="utf-8"?>
<!--
  Abstract :

  Main menu for Stephe's Music Player

  Copyright (C) 2024 Stephen Leake.  All Rights Reserved.

  This program is free software; you can redistribute it and/or
  modify it under terms of the GNU General Public License as
  published by the Free Software Foundation; either version 3, or
  (at your option) any later version. This program is distributed in
  the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  PARTICULAR PURPOSE. See the GNU General Public License for more
  details. You should have received a copy of the GNU General Public
  License distributed with this program; see file COPYING. If not,
  write to the Free Software Foundation, 51 Franklin Street, Suite
  500, Boston, MA 02110-1335, USA.
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@id/menu_update_playlist"
      android:title="@string/menu_update_playlist"/>
  <item
      android:id="@id/menu_search"
      android:title="@string/menu_search"/>
  <item
      android:id="@id/menu_search_spotify"
      android:title="@string/menu_search_spotify"/>
  <item
      android:id="@id/menu_liner_notes"
      android:title="@string/menu_liner_notes"/>
  <item
      android:id="@id/menu_db_sync"
      android:title="@string/menu_db_sync"/>
  <item
      android:id="@id/menu_copy"
      android:title="@string/menu_copy"/>

  <item
      android:id="@id/menu_group_playlist"
      android:title="@string/menu_group_playlist">
    <menu>
      <item
          android:id="@id/menu_new_playlist"
          android:title="@string/menu_new_playlist"/>
      <item
          android:id="@id/menu_show_playlist"
          android:title="@string/menu_show_playlist"/>
      <item
          android:id="@id/menu_clean_playlist"
          android:title="@string/menu_clean_playlist"/>
      <item
          android:id="@id/menu_reset_playlist"
          android:title="@string/menu_reset_playlist"/>
    </menu>
  </item>

  <item
      android:id="@id/menu_group_logs"
      android:title="@string/menu_group_logs">
    <menu>
      <item
          android:id="@id/menu_show_download_log"
          android:title="@string/menu_show_download_log"/>
      <item
          android:id="@id/menu_show_error_log"
          android:title="@string/menu_show_error_log"/>
      <item
          android:id="@id/menu_show_sync_log"
          android:title="@string/menu_show_sync_log"/>
    </menu>
  </item>

  <item
      android:id="@id/menu_group_setup"
      android:title="@string/menu_group_setup">
    <menu>
      <item
          android:id="@id/menu_preferences"
          android:title="@string/menu_preferences"/>
      <item
          android:id="@id/menu_db_init"
          android:title="@string/menu_db_init"/>
      <item
          android:id="@id/menu_db_resume_init"
          android:title="@string/menu_db_resume_init"/>
      <item
          android:id="@id/menu_db_sync_edit_state"
          android:title="@string/menu_db_sync_edit_state"/>
    </menu>
  </item>

</menu>
