<?xml version="1.0" encoding="utf-8"?>
<!--
  Abstract :

  UI layout for Stephe's Music Player, one size fits all

  Copyright (C) 2011, 2015 Stephen Leake.  All Rights Reserved.

  This program is free software; you can redistribute it and/or
  modify it under terms of the GNU General Public License as
  published by the Free Software Foundation; either version 3, or
  (at your option) any later version. This program is distributed in
  the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  PARTICULAR PURPOSE. See the GNU General Public License for more
  details. You should have received a copy of the GNU General Public
  License distributed with this program; see file COPYING. If not,
  write to the Free Software Foundation, 51 Franklin Street, Suite
  500, Boston, MA 02110-1335, USA.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/main_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:elevation="4dp"
      android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

  <ScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/topScroll" >

    <LinearLayout
        android:orientation="vertical"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#000000">

      <TextView
          android:id="@+id/playlist"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:focusable="true"
          android:text="@string/null_playlist"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"
          android:weightSum="1"/>

      <!-- WORKAROUND: the player controls keep disappearing because
           it thinks it's displaying video, so we set the min height;
           good for my phone/tablet -->

      <!-- 150 dp; only shows play/pause -->
      <!-- 200 dp; shows all. -->
      <!-- hide_on_touch, auto_show have no effect -->
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <androidx.media3.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:visibility="visible"
            android:gravity="center"
            app:use_controller="true"
            app:show_shuffle_button="false"
            app:show_subtitle_button="false"
            app:keep_content_on_player_reset="true"
            app:show_buffering="always"
            app:show_vr_button="false"
            app:surface_type="none"
            app:use_artwork="false"
            app:hide_on_touch="false"
            app:auto_show="true"
            app:show_timeout="0"/>

        <TextView
            android:id="@+id/duck_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="🦆"
            android:textSize="64sp"
            android:visibility="gone"/>

      </FrameLayout>

      <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/image_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <!-- year
           composer
           album artist
           artists
           album
           title
           category
           notes buttons
      -->
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:id="@+id/year"
          android:text=""
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/white" />  <!-- separator -->
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:id="@+id/composer"
          android:text=""
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/white" />  <!-- separator -->
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:id="@+id/albumArtist"
          android:text=""
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/white" />  <!-- separator -->
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:id="@+id/artist"
          android:text=""
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/white" /> <!-- separator -->
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:id="@+id/album"
          android:text=""
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/white" /> <!-- separator -->
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text=""
          android:id="@+id/title"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#ffffffff"/> <!-- separator -->

      <androidx.compose.ui.platform.ComposeView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text=""
          android:id="@+id/category"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:background="@android:color/black"
          android:textColor="@android:color/white"/>
      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#ffffffff"/> <!-- separator -->

      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/voice"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_margin="24dp"
          android:contentDescription="Voice Command"
          app:srcCompat="@android:drawable/ic_btn_speak_now"
          app:backgroundTint="@android:color/holo_green_dark"
          app:tint="@android:color/white"/>

      <LinearLayout
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/notes_buttons_1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="bottom"
          android:layout_marginTop="1dip"
          android:layout_marginBottom="2dip"
          android:gravity="center">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.TextButton"
            android:id="@+id/note_category"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/note_category"
            android:onClick="onClickNote"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.TextButton"
            android:id="@+id/note_dont_play"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/note_dont_play"
            android:onClick="onClickNote"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.TextButton"
            android:id="@+id/note_play_before"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/note_play_before"
            android:onClick="onClickNote"/>
      </LinearLayout>
      <LinearLayout
          style="?android:attr/buttonBarButtonStyle"
          android:id="@+id/notes_buttons_2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="center"
          android:layout_marginTop="1dip"
          android:layout_marginBottom="2dip"
          android:gravity="center">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.TextButton"
            android:id="@+id/note_want_more"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/note_want_more"
            android:onClick="onClickNote"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.TextButton"
            android:id="@+id/note_best_list"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/note_best_list"
            android:onClick="onClickNote"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.App.Button.TextButton"
            android:id="@+id/note_volume"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/note_volume"
            android:onClick="onClickNote"/>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>
